# HttpFileServer

./: README.md  autoindex.py  pyproject.toml
httpfileserver/: autoindex.py
httpfileserver/static/: autoindex.css
templates/: autoindex.html
