[project]
name = "HttpFileServer"
version = "0.0.1"
authors = [
  { name="Robert Nowak", email="author@example.com" },
]
description = "Index of a directory with FlaskAutoIndex"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/RobNowak/HttpFileServer"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["httpfileserver"]